--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <div class="contact-form">
                 <h2 style="text-align: center; margin-bottom: 2rem; color: var(--primary-color);">Envie sua Mensagem</h2>
-                <form onsubmit="submitContactForm(event)">
+                <form id="home" onsubmit="submitContactForm(event)">
                     <div class="form-group">
                         <label for="contact-name">Nome Completo</label>
                         <input type="text" id="contact-name" name="name" required>
